--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,36 @@ Thumbs.db
 OpenGL-tutorial_v*
 **.mtl
 .DS_Store
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+/**/*.o
+*.obj
+
+# Precompiled Headers
+/**/*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
