--- a/star/Makefile
+++ b/star/Makefile
@@ -17,9 +17,9 @@ ${EXEC}.o: ${EXEC}.cpp include/mymath.hpp include/config.hpp
 	g++ -c $^ -I ${ROOT} ${LINK} 
 ${EXEC}.out: ${EXEC}.o ../common/build/shader.o include/mymath.o
 	g++ ${CC_FLAGS} -o $@ $^ -I {ROOT} ${LINK} ${GLFW_LINK}
-${SHADER}: ../common/shader.cpp
-	cd ../commom/ && make shader.o
-	cd ../learning/
+${SHADER}: ../common/shader.cpp ../common/shader.hpp
+	cd ../common/ && make build/shader.o
+	cd ../star/
 include/mymath.o: include/mymath.cpp include/config.hpp include/mymath.hpp
 	cd include/ && make mymath.o
 	cd ../
