--- a/common/Makefile
+++ b/common/Makefile
@@ -1,2 +1,4 @@
 build/shader.o: shader.cpp
 	g++ $^ -o $@ -std=c++11 -lGL -lGLEW -c
+build/objloader.o: objloader.cpp
+	g++ $^ -o $@ -std=c++11 -lGL -lGLEW -c
